#449: Added proper security checks aroudn connections to Return Policy objects