@@ -17,66 +17,81 @@
 package com.echothree.control.user.returnpolicy.server.command;
 
 import com.echothree.control.user.returnpolicy.common.form.GetReturnPoliciesForm;
-import com.echothree.control.user.returnpolicy.common.result.GetReturnPoliciesResult;
 import com.echothree.control.user.returnpolicy.common.result.ReturnPolicyResultFactory;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.returnpolicy.server.control.ReturnPolicyControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.returnpolicy.server.entity.ReturnKind;
+import com.echothree.model.data.returnpolicy.server.entity.ReturnPolicy;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetReturnPoliciesCommand
-        extends BaseSimpleCommand<GetReturnPoliciesForm> {
-    
+        extends BaseMultipleEntitiesCommand<ReturnPolicy, GetReturnPoliciesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.ReturnPolicy.name(), SecurityRoles.List.name())
-                    )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.ReturnPolicy.name(), SecurityRoles.List.name())
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ReturnKindName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetReturnPoliciesCommand */
     public GetReturnPoliciesCommand(UserVisitPK userVisitPK, GetReturnPoliciesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+    ReturnKind returnKind;
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ReturnPolicy> getEntities() {
         var returnPolicyControl = Session.getModelController(ReturnPolicyControl.class);
-        GetReturnPoliciesResult result = ReturnPolicyResultFactory.getGetReturnPoliciesResult();
-        String returnKindName = form.getReturnKindName();
-        ReturnKind returnKind = returnPolicyControl.getReturnKindByName(returnKindName);
-        
+        var returnKindName = form.getReturnKindName();
+        Collection<ReturnPolicy> entities = null;
+
+        returnKind = returnPolicyControl.getReturnKindByName(returnKindName);
+
         if(returnKind != null) {
-            result.setReturnKind(returnPolicyControl.getReturnKindTransfer(getUserVisit(), returnKind));
-            result.setReturnPolicies(returnPolicyControl.getReturnPolicyTransfersByReturnKind(getUserVisit(), returnKind));
+            entities = returnPolicyControl.getReturnPolicies(returnKind);
         } else {
             addExecutionError(ExecutionErrors.UnknownReturnKindName.name(), returnKindName);
         }
-        
+
+        return entities;
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<ReturnPolicy> entities) {
+        var result = ReturnPolicyResultFactory.getGetReturnPoliciesResult();
+
+        if(entities != null) {
+            var returnPolicyControl = Session.getModelController(ReturnPolicyControl.class);
+
+            result.setReturnKind(returnPolicyControl.getReturnKindTransfer(getUserVisit(), returnKind));
+            result.setReturnPolicies(returnPolicyControl.getReturnPolicyTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
